<resources>
    <string name="app_name">GoodDeals</string>
    <string name="title_activity_java_ws">CheckLoginActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="photo">photo</string>


    <string name="facebook_app_id">1669835493283338</string>

    <string name="update_default">All</string>
<<<<<<< HEAD
    <string name="list_dialog_title">Categories</string>
=======
    <string name="list_dialog_title">Category</string>
>>>>>>> 557333bd0b136242356db14a5c23bd0861f627ad
    <string name="dialog_title"></string>
    <string name="menu_settings">Settings</string>
    <string name="settings_dialog_message">How far you want to perform your search ?</string>
    <string name="accueil">Just want to see the offers</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Km</string>


    <string name="settings_title">maximum distance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_friend">Friends</string>
    <string name="title_activity_signup">Sign In</string>
    <string name="title_activity_map">Map</string>
</resources>
